infra/projects/infatium/overlays/prod/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: infatium-prod
  labels:
    product: infatium
    environment: prod
