infra/projects/infatium/overlays/prod/app-api-go-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api-go
spec:
  template:
    spec:
      containers:
        - name: app-api-go
          image: registry.infra.makekod.ru/go-api:dev
