infra/projects/infatium/overlays/prod/app-registry-go-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-registry-go
spec:
  template:
    spec:
      containers:
        - name: app-registry-go
          image: registry.infra.makekod.ru/go-registry:dev
