infra/projects/infatium/overlays/prod/worker-processor-go-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-processor-go
spec:
  template:
    spec:
      containers:
        - name: worker-processor-go
